tests/paczka1/small_fuzzy/73815050.err
Error in line 2: WY7049Gy7u S863 6,80
Error in line 8: S863 S671 87,9
